unpackaged/objects/copado__User_Story_Commit__c.object
<CustomObject>
	<fields>
		<fullName>copado__CommitMessage__c</fullName>
		<formula>copado__Snapshot_Commit__r.copado__Commit_Message__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Commit Message</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__External_Id__c</fullName>
		<externalId>true</externalId>
		<label>External Id</label>
		<length>255</length>
		<type>Text</type>
		<unique>true</unique>
	</fields>
	<fields>
		<fullName>copado__LastJobExecutionId__c</fullName>
		<label>Last Job Execution ID</label>
		<length>18</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Snapshot_Commit__c</fullName>
		<label>Snapshot Commit</label>
		<referenceTo>copado__Git_Org_Commit__c</referenceTo>
		<relationshipLabel>User Story Commits</relationshipLabel>
		<relationshipName>User_Story_Commits</relationshipName>
		<relationshipOrder>1</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copado__Status__c</fullName>
		<formula>TEXT(copado__Snapshot_Commit__r.copado__Status__c)</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Status</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__User_Story__c</fullName>
		<label>User Story</label>
		<referenceTo>copado__User_Story__c</referenceTo>
		<relationshipLabel>User Story Commits</relationshipLabel>
		<relationshipName>User_Story_Commits</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copado__View_in_Git__c</fullName>
		<formula>HYPERLINK(IF(AND(NOT(ISNULL(copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c)),	copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c != &apos;&apos;),IF(AND(NOT(ISPICKVAL(copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c +  copado__Snapshot_Commit__r.copado__Commit_Id__c,
IF(CONTAINS(copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;),SUBSTITUTE(copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;,copado__Snapshot_Commit__r.copado__Commit_Id__c),copado__Snapshot_Commit__r.copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c + copado__Snapshot_Commit__r.copado__Commit_Id__c)),IF(AND(NOT(ISNULL(copado__User_Story__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c)), copado__User_Story__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c != &apos;&apos;), IF(
AND(NOT(ISPICKVAL(copado__User_Story__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__User_Story__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),copado__User_Story__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c +  copado__Snapshot_Commit__r.copado__Commit_Id__c,
IF(CONTAINS(copado__User_Story__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;),
SUBSTITUTE(copado__User_Story__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;,copado__Snapshot_Commit__r.copado__Commit_Id__c),copado__User_Story__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c + copado__Snapshot_Commit__r.copado__Commit_Id__c
)),IF(AND(NOT(ISNULL(copado__User_Story__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c)), copado__User_Story__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c != &apos;&apos;), 
IF(AND(NOT(ISPICKVAL(copado__User_Story__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__User_Story__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
copado__User_Story__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c +  copado__Snapshot_Commit__r.copado__Commit_Id__c,
IF(CONTAINS(copado__User_Story__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;),
SUBSTITUTE(copado__User_Story__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;,copado__Snapshot_Commit__r.copado__Commit_Id__c),
copado__User_Story__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Commit_Base_URL__c + copado__Snapshot_Commit__r.copado__Commit_Id__c
)),&apos;&apos;))),LEFT(copado__Snapshot_Commit__r.copado__Commit_Id__c, 7))</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>View in Git</label>
		<type>Text</type>
	</fields>
	<label>User Story Commit</label>
	<nameField>
		<label>US Commit</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>User Story Commits</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>